feat: integrate search with flexsearch and introduce promotion-system for multi-env handler
